--- a/app/views/ctrl/index.html.erb
+++ b/app/views/ctrl/index.html.erb
@@ -1,154 +1,50 @@
-<script>
-
-onload=function(){
-	document.onmousemove = 
-		 OnTargetDivMouseMove;
-
-	/*var bg = document.getElementById("backgroundDiv");
-	fishPos.x = ToNumber(bg.style.left)  + ToNumber(bg.style.width) /2  ;
-	fishPos.y = ToNumber(bg.style.top )  + ToNumber(bg.style.height) /2;*/
-	
-
-	OnFishMove();
-}
-
-function Vector2() {
-	this.x = 0.0;
-	this.y = 0.0;
-	this.Add = function(v) {
-		this.x += v.x;
-		this.y += v.y;
-		return this;
-	};
-	this.Subtract = function(v) {
-		this.x -= v.x;
-		this.y -= v.y;
-		return this;
-	};
-	this.Multi = function(k) {
-		this.x *= k;
-		this.y *= k;
-		return this;
-	};
-	this.ToZero=function(){
-		this.x = 0;
-		this.y = 0;
-		return this;
-	};
-	this.Set=function(x,y) {
-		this.x = x;
-		this.y = y;
-		return this;
-	}
-	this.Copy=function(v){
-		this.x = v.x;
-		this.y = v.y;
-		return this;
-	}
-}
-
-var K = 13.0;
-var dt = 1.0 / 20.0;
-var M = 3.0;
-var Eta = 2*Math.sqrt(M*K);
-var fishAcceleration = new Vector2();
-var fishVerosity = new Vector2();
-var fishPos = new Vector2();
-var mousePos = new Vector2();
-
-function OnTargetDivMouseMove(e) {
-	if(!e) return;
-
-	mousePos.x = e.clientX;
-	mousePos.y = e.clientY;
-}
-
-function ToNumber(stylePxStr) {
-	return Math.floor(stylePxStr.substr( 0 , stylePxStr.length - 2 ) );
-}
-
-function OnFishMove() {
-	fishAcceleration.ToZero();
-	fishAcceleration.Add(
-		new Vector2()
-		.Copy(mousePos)
-		.Subtract(fishPos)
-		.Multi(K)
-		.Subtract( 
-			new Vector2()
-			.Copy(fishVerosity)
-			.Multi(Eta)
-		)
-		.Multi(M)
-	);
-	fishVerosity.Add(
-		new Vector2()
-		.Copy(fishAcceleration)
-		.Multi(dt)
-	);
-	
-	//var bg = document.getElementById("backgroundDiv");
-	var fishDiv = document.getElementById("targetDiv");
-
-	fishPos.Add(
-		new Vector2()
-		.Copy(fishVerosity)
-		.Multi(dt)
-	);
-	
-
-	fishDiv.style.left = Math.floor(fishPos.x) + "px";		
-	fishDiv.style.top = Math.floor(fishPos.y) + "px";
-
-	
-	
-	setTimeout("OnFishMove()",dt * 1000.0 );
-}
-</script>
-        <div class="pagebody">
-            <div class="header">
-                <h1><a href="#">Inc Real</a></h1>
+<div class="pagebody">
+	<center><div class="header">
+    	<h1><a href="#">Inc Real</a></h1>
+    </div></center>
+    
+    <!-- 画像の上で移動 -->
+    <div id="myDiv">
+    	<!-- <div id="backgroundDiv" style="background:url('./bg.png');position:absolute;top:250px;left:250px;width:640px;height:400;"></div> backgroundDiv-->
+        <div id="targetDiv" style="position:absolute;width:126px;height:47px;"><img src="../assets/sarry-re2.png"></div><!--targetDiv-->               
+	</div><!--myDiv-->
+            
+	<div class="nav">
+    	<ul>
+	    	<li><a href="#" >News</a></li>
+	        <li id="now"><a href="#" >Beauty</a></li>
+	        <li><a href="#" >Hobby</a></li>
+	        <li><a href="#" >IT</a></li>
+	        <li><a href="#" >Column</a></li>
+        </ul>
+    </div>
+    <div class="twocol">
+    	<div class="section">
+        	<div class="main">
+            	<h2>HOME</h2>
+                <p>本文...</p>
+                <div class="article">
+                	<h3>進歩状況</h3>
+                    <p><string>5/31：</string>これまでに作っていたホームページのプログラムをrailsにはめ込むことができた。
+                    	さらにアクションやテンプレートの繋がりを理解することにより、HOMEでの画像の表示に成功する。</p>
+                    <p>課題はファイル名を自動に所得できるようにするか、ファイル名を自動で1.2.3...と続くようなファイル名に変換すること。
+                    	これができないとビューワーにならない。後者の場合、ファイル数をじどうでかぞえてくれるようにしないといけない。
+                    	railsでのリンクの飛ばし方を学習する。
+                    <p><string>6/4 :</string>上の課題は解決できた。現在行っているのは複数個のファイルを同時にアップロードすること</p>
+                	<p><string>6/5 :</string>複数個のファイルをアップロードできたが、その後の完了画面がうまくいかない</p>
+                	<p><string>6/4 :　　　　　　　　　　　　　　　　　　　　　　                                   </string>画像のグループ分け、閲覧数による表示の優先度、個人のフォルダ、公開フォルダなどを作る、
+                		画像幅が違うものがうまく表示されない、ブラウザの幅が違うと表示されない</p>
+                	
+                </div>    
             </div>
-            
-            <!-- 画像の上で移動 -->
-            <div id="myDiv">
-                <!-- <div id="backgroundDiv" style="background:url('./bg.png');position:absolute;top:250px;left:250px;width:640px;height:400;"></div> backgroundDiv-->
-                
-                <div id="targetDiv" style="position:absolute;width:126px;height:47px;"><img src="../assets/sarry-re2.png"></div><!--targetDiv-->
-                
-                
-</div><!--myDiv-->
-            
-            <div class="nav">
-                <ul>
-	               <li><a href="#" >News</a></li>
-	               <li id="now"><a href="#" >Beauty</a></li>
-	               <li><a href="#" >Hobby</a></li>
-	               <li><a href="#" >IT</a></li>
-	               <li><a href="#" >Column</a></li>
+        </div>
+        <div class="aside side1">
+        	<h2>最新記事</h2>
+            	<ul>
+                	<li><a href="#">はじめました</a></li>
+                    <li><a href="#">はじめました</a></li>
+                    <li><a href="#">はじめました</a></li>
                 </ul>
-            </div>
-            <div class="twocol">
-            <div class="section">
-                <div class="main">
-                    <h2>HOME</h2>
-                    <p>本文...</p>
-                    <div class="article">
-                        <h3>進歩状況</h3>
-                        <p><string>5/31：</string>これまでに作っていたホームページのプログラムをrailsにはめ込むことができた。さらにアクションやテンプレートの繋がりを理解することにより、HOMEでの画像の表示に成功する。</p>
-                        <p>課題はファイル名を自動に所得できるようにするか、ファイル名を自動で1.2.3...と続くようなファイル名に変換すること。これができないとビューワーにならない。後者の場合、ファイル数をじどうでかぞえてくれるようにしないといけない。railsでのリンクの飛ばし方を学習する。
-                    </div>
-                    
-                </div>
-            </div>
-            <div class="aside side1">
-                <h2>最新記事</h2>
-                    <ul>
-                        <li><a href="#">はじめました</a></li>
-                        <li><a href="#">はじめました</a></li>
-                        <li><a href="#">はじめました</a></li>
-                        
-                    </ul>
                 <h2>人気記事</h2>
                     <ul>
                         <li><a href="#">はじめました</a></li>
@@ -159,30 +55,34 @@ function OnFishMove() {
                 <div class="ad">
                     <a href="#"></a>
                 </div>
-            </div>
-            </div>
-                <div class="aside side2">
-                    <div class="ad"><a href="#"><img src="../assets/icon.jpg" alt=""></a></div>
-                    <h2>今週のピックアップ</h2>
-                    <ul>
-                        <li><a href="#">IT</a></li>
-                        <li><a href="#">BIKE</a></li>
-                        <li><a href="#">CAR</a></li>
-                    </ul>
-                </div>
-            <div class="footer">
-                <address>Copy Right SAKASUKE <a href="#">Inc Real</a></address>
-            </div>
+                <a href="./upload">アップロード</a><br>    
+				<a href="./viewer">  ギャラリー</a>
         </div>
-        
-<%= form_tag({ :action => 'upload_process' }, :multipart => true) do %>
+    </div>
+    <div class="aside side2">
+    	<div class="ad"><a href="#"><img src="../assets/icon.jpg" alt=""></a></div>
+        	<h2>今週のピックアップ</h2>
+            <ul>
+            	<li><a href="#">IT</a></li>
+                <li><a href="#">BIKE</a></li>
+                <li><a href="#">CAR</a></li>
+            </ul>
+        </div>
+    <div class="footer">
+    	<address>Copy Right SAKASUKE <a href="#">Inc Real</a></address><br>
+    	<center>        	
+			<% for i in 0..2%>
+				<%= image_tag '' + @rand[i] + '.jpg' , :width => 4592*0.09, :height => 3056*0.09 %>
+			<% end %>
+		</center><br />
 	
-	<center><%= image_tag '' + @rand1 + '.jpg' , :width => 4592/9, :height => 3056/9 %>
-	<%= image_tag '' + @rand2 + '.jpg' , :width => 4592/9, :height => 3056/9 %>
-	<%= image_tag '' + @rand3 + '.jpg' , :width => 4592/9, :height => 3056/9 %></center><br />
-	
-	<label>ファイルを指定：	
-		<%= file_field_tag 'upfile', { :size => 100  }%></label>
-	<%= submit_tag 'アップロード'%><br />
+		<center>
+			<% for i in 3..6%>
+				<%= image_tag '' + @rand[i] + '.jpg' , :width => 4592/15, :height => 3056/15 %>
+			<% end %>
+		</center><br />
+    </div>
+</div>
 
-<% end %>
+
+
